Add basic markup for index page

--- a/Project/index.html
+++ b/Project/index.html
@@ -1,10 +1,43 @@
-COMPANY NAME
-Products
-Blog
-Contact
-we are 
-entertainment
-mobile games
-board games
-console games
-2018 - Student name - Inholland 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="css/style.css">
+    <title>We are entertainment"</title>
+</head>
+<body>
+    <section class="main">
+        <header>
+            <h1>
+                <a href="index.html">COMPANY NAME</a>
+            </h1>
+        </header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="product.html">Products</a>
+                </li>
+
+                <li>
+                    <a href="https://www.blogger.com">Blog</a>
+                </li>
+
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </nav>
+
+        <section class="index">
+
+        </section>
+
+        <footer>
+            <p>&copy; 2018 Jurek Baumann - Inholland</p>
+        </footer>
+
+    </section>
+</body>
+</html>
