Add index page content

--- a/Project/index.html
+++ b/Project/index.html
@@ -30,8 +30,30 @@
             </ul>
         </nav>
 
-        <section class="index">
+        <section class='index'>
+            <article>
+                <h2>we are entertainment</h2>
+            </article>
+            
+            <figure></figure>
 
+            <article>
+                <h2>mobile games</h2>
+            </article>
+
+            <figure></figure>
+
+            <article>
+                <h2>board games</h2>
+            </article>
+
+            <figure></figure>
+
+            <article>
+                <h2>console games</h2>
+            </article>
+
+            <figure></figure>
         </section>
 
         <footer>
