--- a/Project/index.html
+++ b/Project/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="inholland, gaming, Games, entertainment, website, assignment, mobile Games, board Games, mobile Games">
+    <meta name="description" content="We are entertainment! Check out mobile games, board games, console games and much more!">
+    <meta name="author" content="Jurek Baumann">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
     <link rel="stylesheet" href="css/style.css">
+
     <title>We are entertainment"</title>
 </head>
 <body>
