--- a/Project/product.html
+++ b/Project/product.html
@@ -1,6 +1,80 @@
-COMPANY NAME
-Home
-Blog
-Contact
-product catalog
-2018 - Student name - Inholland 
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="keywords" content="inholland, product, products, mario, rubik's cube, SNES, beer pong, yoshi, luigi, basketball">
+        <meta name="description" content="Choose from various products such as rubik's cubes, game controllers, games and way more!">
+        <meta name="author" content="Jurek Baumann">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="icon" type="image/svg+xml" href="favicon.svg">
+
+        <link rel="stylesheet" href="css/style.css">
+
+        <title>Gaming Products Board Games Game Controllers</title>
+    </head>
+    <body>
+        <section class="main">
+            <header>
+                <h1>
+                    <a href="index.html">COMPANY NAME</a>
+                </h1>
+            </header>
+
+            <nav>
+                <!-- Implement hamburger icon with spans since IE 11 struggles with SVG animations -->
+                <input type="checkbox" role="button">
+
+                <menu id="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </menu>
+
+                <ul class="nav-list">
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+
+                    <li>
+                        <a href="https://www.blogger.com">Blog</a>
+                    </li>
+
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <section class="gallery">
+            <article class="banner">
+                <h2>products</h2>
+                <h2>product catalog</h2>
+            </article>
+
+                <a href="img/product1.jpg"></a>
+                <a href="img/product2.jpg"></a>
+                <a href="img/product3.jpg"></a>
+                <a href="img/product4.jpg"></a>
+                <a href="img/product5.jpg"></a>
+                <a href="img/product6.jpg"></a>
+                <a href="img/product7.jpg"></a>
+                <a href="img/product8.jpg"></a>
+                <a href="img/product9.jpg"></a>
+                <a href="img/product10.jpg"></a>
+                <a href="img/product11.jpg"></a>
+                <a href="img/product12.jpg"></a>
+                
+            </section>
+
+            <footer>
+                <p>&copy; 2018 Jurek Baumann - Inholland</p>
+            </footer>
+
+        </section>
+    </body>
+</html>
