Add background movie

--- a/Project/product.html
+++ b/Project/product.html
@@ -18,6 +18,7 @@
         <title>Gaming Products Board Games Game Controllers</title>
     </head>
     <body>
+        <video autoplay muted loop src="movie/background.mp4"></video>
         <section class="main">
             <header>
                 <h1>
