--- a/Project/contact.html
+++ b/Project/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="inholland, gaming, games, entertainment, contact, contact us, feedback, mail, mail us">
-    <meta name="description" content="If you seek more information, feel free to contact us!">
+        <meta name="description" content="If you seek more information, feel free to contact us!">
         <meta name="author" content="Jurek Baumann">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -18,6 +18,7 @@
         <title>Contact Us | Give feedback</title>
     </head>
     <body>
+        <video autoplay muted loop src="movie/background.mp4"></video>
         <section class="main">
             <header>
                 <h1>
