--- a/Project/index.html
+++ b/Project/index.html
@@ -6,7 +6,8 @@
     <meta name="description" content="We are entertainment! Check out mobile games, board games, console games and much more!">
     <meta name="author" content="Jurek Baumann">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
+
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -18,6 +19,7 @@
     <title>We are entertainment"</title>
 </head>
 <body>
+    <video autoplay muted loop src="movie/background.mp4"></video>
     <section class="main">
         <header>
             <h1>
