Change <menu> to <figure> to get rid of validation errors

--- a/Project/contact.html
+++ b/Project/contact.html
@@ -30,11 +30,11 @@
                 <!-- Implement hamburger icon with spans since IE 11 struggles with SVG animations -->
                 <input type="checkbox" role="button">
 
-                <menu id="hamburger">
+                <figure id="hamburger">
                     <span></span>
                     <span></span>
                     <span></span>
-                </menu>
+                </figure>
 
                 <ul class="nav-list">
                     <li>
