Fix validation warnings

--- a/Project/index.html
+++ b/Project/index.html
@@ -81,7 +81,7 @@
         <footer>
             <p>&copy; 2018 Jurek Baumann - Inholland</p>
         </footer>
-
+        <h6>end of content</h6>
     </section>
 </body>
 </html>
