Finally fix stupid warning

--- a/Project/contact.html
+++ b/Project/contact.html
@@ -52,6 +52,7 @@
             </nav>
 
             <section class="contact">
+                <h6>page content</h6>
 				<article class="contact-banner">
 					<h2>contact</h2>
 				</article>
@@ -94,7 +95,6 @@
 							value="Submit"
 					/>
                 </form>
-                <h6>end of content</h6>
             </section>
             <footer>
                 <p>&copy; 2018 Jurek Baumann - Inholland</p>
