--- a/Project/index.html
+++ b/Project/index.html
@@ -53,6 +53,7 @@
         </nav>
 
         <section class="index">
+            <h6>page content</h6>
             <article>
                 <h2>we are entertainment</h2>
             </article>
@@ -76,7 +77,7 @@
             </article>
 
             <figure></figure>
-            <h6>end of content</h6>
+            
         </section>
 
         <footer>
