--- a/Project/product.html
+++ b/Project/product.html
@@ -52,10 +52,11 @@
             </nav>
 
             <section class="gallery">
-            <article class="banner">
-                <h2>products</h2>
-                <h2>product catalog</h2>
-            </article>
+                <h6>page content</h6>
+                <article class="banner">
+                    <h2>products</h2>
+                    <h2>product catalog</h2>
+                </article>
 
                 <a href="img/product1.jpg"></a>
                 <a href="img/product2.jpg"></a>
@@ -69,8 +70,7 @@
                 <a href="img/product10.jpg"></a>
                 <a href="img/product11.jpg"></a>
                 <a href="img/product12.jpg"></a>
-                
-                <h6>end of content</h6>
+
             </section>
 
             <footer>
